# Leapture

./: .gitignore  CMakeLists.txt  CommandsBinded.json  Makefile  README.md  Sample  debug.cpp  gestures.cpp  gestures.h  howwors.txt  inter.cpp  inter.h  interface.cpp  interface.h  lift  listener.cpp  listener.h  ll  main.cpp  palma  puno  state.cpp  state.h  tos lift palma puno:q  window.cpp  window.h
gtkmm/: Interface.cpp  Interface.h  Windows.cpp  Windows.h  examplewindow.cpp  examplewindow.h  f  helloworld.cpp  helloworld.h  main.cpp
interface-gtk/: .CMakeList.txt.swp  .directory  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloworld.c  main2.c  window
